[tool.poetry]
name = "save_noita"
version = "0.1.0"
description = ""
authors = ["mcgillij <mcgillivray.jason@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
PySimpleGUI = "^4.34.0"
psutil = "^5.8.0"

[tool.poetry.dev-dependencies]
ipython = "^7.20.0"
pylint = "^2.7.1"
flake8 = "^3.8.4"
black = "^20.8b1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
