[tool.poetry]
name = "noita-save-manager"
version = "0.1.4"
description = "Noita Save Manager, allows for backup and restoring of save files"
authors = ["mcgillij <mcgillivray.jason@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/mcgillij/noita_save_manager"
repository = "https://github.com/mcgillij/noita_save_manager"
documentation = "https://github.com/mcgillij/noita_save_manager/blob/main/README.md"

keywords = ["noita", "save", "backup", "restore", "manager"]

classifiers = [
    "Intended Audience :: End Users/Desktop",
    "Natural Language :: English",
    "Operating System :: POSIX :: Linux",
    "Operating System :: Microsoft :: Windows :: Windows 10",
    "Topic :: Games/Entertainment",
    "Topic :: System :: Archiving :: Backup",
    "Topic :: Utilities",
]

include = [ "LICENSE", ]

[tool.poetry.scripts]
noita_save_manager = 'noita_save_manager.save_manager:main'

[tool.poetry.dependencies]
python = "^3.9"
PySimpleGUI = "^4.34.0"
psutil = "^5.8.0"

[tool.poetry.dev-dependencies]
pylint = "^2.7.1"
flake8 = "^3.8.4"
black = "^20.8b1"
pyinstaller = "^4.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
